np-tes-user.yml
apiVersion: v1
kind: Pod
metadata:
  name: np-test-user
  namespace: np-tes
  labels:
    app: client
spec:
  containers: 
  - name: busybox
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do sleep 5; done']
