np-tes.yml
apiVersion: v1
kind: Pod
metadata:
  name: np-test
  namespace: np-tes
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.19.1
