volume-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: volume-pod
spec:
  restartPolicy: Never
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'while true; do sleep 5 && echo output >> /output/log.log; done']
    volumeMounts:
    - name: volume-pod-v
      mountPath: /output/
  volumes:
  - name: volume-pod-v
    hostPath:
      path: /tmp/
