service-svc-example.yml
apiVersion: v1
kind: Service
metadata:
  name: service-svc
spec:
  type: ClusterIP
  selector:
    app: svc-example
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
