network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-np-test
  namespace: np-tes
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          team: np-tes
    ports:
    - protocol: TCP
      port: 80
